@@ -1,6 +1,6 @@
 Package: batchelor
-Version: 1.7.5
-Date: 2021-01-11
+Version: 1.7.6
+Date: 2021-01-20
 Title: Single-Cell Batch Correction Methods
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
     person("Laleh", "Haghverdi", role="ctb"))
