@@ -82,9 +82,11 @@ importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,normalizeSingleBracketSubscript)
 importFrom(ScaledMatrix,ScaledMatrix)
+importFrom(SingleCellExperiment,"altExp<-")
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SingleCellExperiment,"reducedDims<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SingleCellExperiment,altExp)
 importFrom(SingleCellExperiment,reducedDim)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
